--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "devDependencies": {
     "@types/react": "17.0.30",
-    "eslint": "8.0.1",
+    "autoprefixer": "^10.3.7",
+    "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.9",
+    "tailwind": "^4.0.0",
     "typescript": "4.4.4"
   }
 }
