--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.9",
-    "tailwind": "^4.0.0",
+    "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
   }
 }
