--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "mongoose": "^6.0.11",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-debounce-input": "^3.2.5",
+    "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
+    "@types/react-transition-group": "^4.4.3",
     "autoprefixer": "^10.3.7",
     "eslint": "^8.0.1",
     "eslint-config-next": "11.1.2",
