--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "17.0.2",
     "react-debounce-input": "^3.2.5",
     "react-dom": "17.0.2",
+    "react-social-icons": "^5.6.1",
     "react-transition-group": "^4.4.2",
     "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "17.0.30",
+    "@types/react-dom": "^17.0.9",
     "@types/react-transition-group": "^4.4.3",
     "autoprefixer": "^10.3.7",
     "eslint": "^8.0.1",
