--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "colormap": "^2.3.2",
     "mongoose": "^6.0.11",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-debounce-input": "^3.2.5",
     "react-dom": "17.0.2",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-social-icons": "^5.6.1",
     "react-transition-group": "^4.4.2",
     "swr": "^1.0.1"
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/react": "17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-transition-group": "^4.4.3",
     "autoprefixer": "^10.3.7",
     "eslint": "^8.0.1",
