--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "mongoose": "^6.0.11",
     "next": "11.1.2",
     "nodemailer": "^6.7.0",
+    "opensea-js": "^1.2.1",
     "react": "17.0.2",
     "react-debounce-input": "^3.2.5",
     "react-dom": "17.0.2",
     "react-lazy-load-image-component": "^1.5.1",
     "react-social-icons": "^5.6.1",
     "react-transition-group": "^4.4.2",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "web3": "^1.6.0"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.4",
