--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-icons": "^3.0.0",
+    "blurhash": "^1.1.4",
     "colormap": "^2.3.2",
     "mongoose": "^6.0.11",
     "next": "11.1.2",
     "nodemailer": "^6.7.0",
     "opensea-js": "^1.2.1",
     "react": "17.0.2",
+    "react-blurhash": "^0.1.3",
     "react-debounce-input": "^3.2.5",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-lazy-load-image-component": "^1.5.1",
     "react-social-icons": "^5.6.1",
     "react-transition-group": "^4.4.2",
